test/test-files/analyzer/methods/error-destructor-with-args/exception.out
Semantic error in : ./test-files/analyzer/methods/error-destructor-with-args/source.spice:5:1:
Destructors must not have parameters: It is not allowed to specify parameters for destructors

p TestStruct.dtor(int test) {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^